@@ -100,6 +100,12 @@ $ if ( have_png ) then write libsf "sys$library:libpng_cxx.olb/lib"
 $ if ( have_bz2 ) then write libsf "sys$library:libbz2_cxx.olb/lib"
 $ if ( have_z ) then write libsf "sys$library:libz_cxx.olb/lib"
 $ close libsf
+$ open/write libsf libs_cxx32.opt
+$ if ( have_harfbuzz ) then write libsf "sys$library:libharfbuzz.olb/lib"
+$ if ( have_png ) then write libsf "sys$library:libpng_cxx32.olb/lib"
+$ if ( have_bz2 ) then write libsf "sys$library:libbz2_cxx32.olb/lib"
+$ if ( have_z ) then write libsf "sys$library:libz_cxx32.olb/lib"
+$ close libsf
 $!
 $! Create objects
 $!
@@ -172,6 +178,19 @@ $   write file "freetype_cxx.obj"
 $   close file
 $   link/nodeb/share=[.lib]freetype2shr_cxx.exe/map=libfreetype_cxx.map/full -
       libfreetype_cxx/opt,freetype_vms/opt,libs_cxx/opt
+$   delete freetype_cxx.obj;*
+$   write sys$output "Creating freetype2shr_cxx32.exe"
+$   library/extract=* [.lib]freetype_cxx32.olb
+$   open/write file  libfreetype_cxx32.opt
+$   write file "!"
+$   write file "! libfreetype_cxx32.opt generated by vms_make.com"
+$   write file "!"
+$   write file "IDENTIFICATION=""freetype2 2.0"""
+$   write file "GSMATCH=LEQUAL,2,0
+$   write file "freetype_cxx32.obj"
+$   close file
+$   link/nodeb/share=[.lib]freetype2shr_cxx32.exe/map=libfreetype_cxx32.map/full -
+      libfreetype_cxx32/opt,freetype_vms/opt,libs_cxx32/opt
 $   delete freetype_cxx.obj;*
 $ endif
 $!
@@ -323,6 +342,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base]
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -347,10 +367,13 @@ OBJS64=ftsystem_64.obj
 
 OBJSCXX=ftsystem_cxx.obj
 
+OBJSCXX=ftsystem_cxx32.obj
+
 all : $(OBJS)
 	library/create [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library/create [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library/create [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -386,6 +409,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base] -Isys$library
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -410,10 +434,13 @@ OBJS64=autofit_64.obj
 
 OBJSCXX=autofit_cxx.obj
 
+OBJSCXX32=autofit_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -448,6 +475,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base]
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -517,10 +545,28 @@ OBJSCXX=ftbase_cxx.obj,\
      fttype1_cxx.obj,\
      ftwinfnt_cxx.obj,ftpatent_cxx.obj,ftgxval_cxx.obj,ftotval_cxx.obj
 
+OBJSCXX32=ftbase_cxx32.obj,\
+     ftbbox_cxx32.obj,\
+     ftbdf_cxx32.obj,\
+     ftbitmap_cxx32.obj,\
+     ftcid_cxx32.obj,\
+     ftdebug_cxx32.obj,\
+     ftfstype_cxx32.obj,\
+     ftgasp_cxx32.obj,\
+     ftglyph_cxx32.obj,\
+     ftinit_cxx32.obj,\
+     ftmm_cxx32.obj,\
+     ftpfr_cxx32.obj,\
+     ftstroke_cxx32.obj,\
+     ftsynth_cxx32.obj,\
+     fttype1_cxx32.obj,\
+     ftwinfnt_cxx32.obj,ftpatent_cxx32.obj,ftgxval_cxx32.obj,ftotval_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -560,6 +606,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base])
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -584,10 +631,13 @@ OBJS64=bdf_64.obj
 
 OBJSCXX=bdf_cxx.obj
 
+OBJSCXX32=bdf_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -622,6 +672,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base]
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -646,10 +697,13 @@ OBJS64=ftcache_64.obj
 
 OBJSCXX=ftcache_cxx.obj
 
+OBJSCXX32=ftcache_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -687,6 +741,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base]
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -711,10 +766,13 @@ OBJS64=cff_64.obj
 
 OBJSCXX=cff_cxx.obj
 
+OBJSCXX32=cff_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -749,6 +807,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base]
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -773,10 +832,13 @@ OBJS64=type1cid_64.obj
 
 OBJSCXX=type1cid_cxx.obj
 
+OBJSCXX32=type1cid_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -811,6 +873,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base]
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -835,10 +898,13 @@ OBJS64=gxvalid_64.obj
 
 OBJSCXX=gxvalid_cxx.obj
 
+OBJSCXX32=gxvalid_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -872,6 +938,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base]
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -896,10 +963,13 @@ OBJS64=ftgzip_64.obj
 
 OBJSCXX=ftgzip_cxx.obj
 
+OBJSCXX32=ftgzip_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -935,6 +1005,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base] -Isys$library
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -959,10 +1030,13 @@ OBJS64=ftbzip2_64.obj
 
 OBJSCXX=ftbzip2_cxx.obj
 
+OBJSCXX32=ftbzip2_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -996,6 +1070,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base]
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -1020,10 +1095,13 @@ OBJS64=ftlzw_64.obj
 
 OBJSCXX=ftlzw_cxx.obj
 
+OBJSCXX32=ftlzw_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -1058,6 +1136,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base]
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -1082,10 +1161,13 @@ OBJS64=otvalid_64.obj
 
 OBJSCXX=otvalid_cxx.obj
 
+OBJSCXX32=otvalid_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -1132,6 +1214,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base]
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -1156,10 +1239,13 @@ OBJS64=pcf_64.obj
 
 OBJSCXX=pcf_cxx.obj
 
+OBJSCXX32=pcf_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -1194,6 +1280,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base]
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -1218,10 +1305,13 @@ OBJS64=pfr_64.obj
 
 OBJSCXX=pfr_cxx.obj
 
+OBJSCXX32=pfr_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -1256,6 +1346,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base]
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -1280,10 +1371,13 @@ OBJS64=psaux_64.obj
 
 OBJSCXX=psaux_cxx.obj
 
+OBJSCXX32=psaux_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -1318,6 +1412,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base]
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -1342,10 +1437,13 @@ OBJS64=pshinter_64.obj
 
 OBJSCXX=pshinter_cxx.obj
 
+OBJSCXX32=pshinter_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -1380,6 +1478,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base]
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -1404,10 +1503,13 @@ OBJS64=psnames_64.obj
 
 OBJSCXX=psnames_cxx.obj
 
+OBJSCXX32=psnames_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -1442,6 +1544,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base]
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -1466,10 +1569,13 @@ OBJS64=raster_64.obj
 
 OBJSCXX=raster_cxx.obj
 
+OBJSCXX32=raster_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -1505,6 +1611,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base] -Isys$library\
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -1529,10 +1636,13 @@ OBJS64=sfnt_64.obj
 
 OBJSCXX=sfnt_cxx.obj
 
+OBJSCXX32=sfnt_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -1567,6 +1677,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I [] -I[--.include] -I[--.src.base]
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -1591,10 +1702,13 @@ OBJS64=smooth_64.obj
 
 OBJSCXX=smooth_cxx.obj
 
+OBJSCXX32=smooth_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -1629,6 +1743,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base]
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -1653,10 +1768,13 @@ OBJS64=svg_64.obj
 
 OBJSCXX=svg_cxx.obj
 
+OBJSCXX32=svg_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -1691,6 +1809,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base]
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -1715,10 +1834,13 @@ OBJS64=truetype_64.obj
 
 OBJSCXX=truetype_cxx.obj
 
+OBJSCXX32=truetype_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -1753,6 +1875,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base]
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -1777,10 +1900,13 @@ OBJS64=type1_64.obj
 
 OBJSCXX=type1_cxx.obj
 
+OBJSCXX32=type1_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -1817,6 +1943,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base]
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -1841,10 +1968,13 @@ OBJS64=sdf_64.obj
 
 OBJSCXX=sdf_cxx.obj
 
+OBJSCXX32=sdf_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -1881,6 +2011,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base]
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -1905,10 +2036,13 @@ OBJS64=type42_64.obj
 
 OBJSCXX=type42_cxx.obj
 
+OBJSCXX32=type42_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
@@ -1943,6 +2077,7 @@ CXXFLAGS=$(CXXCOMP_FLAGS) -I[] -I[--.include] -I[--.src.base]
 
 .ifdef X86
 .c.obj :
+	clang $(CXXFLAGS) -pointer-size=32 -o $(MMS$TARGET_NAME)_cxx32.obj $(MMS$TARGET_NAME).c
 	clang $(CXXFLAGS) -o $(MMS$TARGET_NAME)_cxx.obj $(MMS$TARGET_NAME).c
 	cc$(CFLAGS)/warn=noinfo/point=32/list/show=all $(MMS$TARGET_NAME).c
 	pipe link/map/full/exec=nl: $(MMS$TARGET_NAME).obj | copy sys$input nl:
@@ -1967,10 +2102,13 @@ OBJS64=winfnt_64.obj
 
 OBJSCXX=winfnt_cxx.obj
 
+OBJSCXX32=winfnt_cxx32.obj
+
 all : $(OBJS)
 	library [--.lib]freetype.olb $(OBJS)
 	library [--.lib]freetype.olb $(OBJS64)
 .ifdef X86
+	library [--.lib]freetype_cxx32.olb $(OBJSCXX32)
 	library [--.lib]freetype_cxx.olb $(OBJSCXX)
 	library [--.lib]freetype_cxx.olb $(OBJS64)
 .endif
